--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "engines": {
        "node": ">=20"
     },
+    "version": "0.0.1",
     "os": ["darwin", "linux"],
     "type": "module",
     "dependencies": {},
