--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
     "license": "The Unlicense",
     "main": "index.js",
     "engines": {
-       "node": ">=20"
+        "node": ">=20"
     },
-    "version": "0.0.4",
-    "os": ["darwin", "linux"],
+    "version": "0.0.5",
+    "os": [
+        "darwin",
+        "linux"
+    ],
     "type": "module",
     "dependencies": {},
     "devDependencies": {
-        "eslint": "^8.29.0",
-        "eslint-config-prettier": "^8.5.0",
-        "prettier": "^2.7.1",
-        "@stylistic/eslint-plugin-js": "1.5.4",
-        "eslint-plugin-prettier": "5.1.3",
-        "eslint-plugin-unicorn": "50.0.1"
+        "@stylistic/eslint-plugin-js": "^1.7.0",
+        "eslint": "^9.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-unicorn": "^52.0.0",
+        "prettier": "^3.2.5"
     },
     "prettier": {
         "arrowParens": "always",
@@ -42,7 +45,11 @@
     },
     "eslintConfig": {
         "root": true,
-        "plugins": ["prettier", "@stylistic/js", "unicorn"],
+        "plugins": [
+            "prettier",
+            "@stylistic/js",
+            "unicorn"
+        ],
         "parserOptions": {
             "ecmaVersion": "latest",
             "sourceType": "module"
