--- a/package.json
+++ b/package.json
@@ -7,7 +7,17 @@
     "engines": {
         "node": ">=20"
     },
-    "version": "0.0.23",
+    "version": "0.0.24",
+    "keywords": [
+        "radical",
+        "utilities",
+        "util",
+        "node22",
+        "modern",
+        "anime",
+        "illegal",
+        "marijuana"
+    ],
     "os": [
         "darwin",
         "linux"
@@ -16,13 +26,17 @@
     "dependencies": {
         "text-case": "^1.0.9"
     },
+    "scripts": {
+        "release": "release-it"
+    },
     "devDependencies": {
         "@stylistic/eslint-plugin-js": "^1.7.0",
         "eslint": "^9.0.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-unicorn": "^52.0.0",
-        "prettier": "^3.2.5"
+        "prettier": "^3.2.5",
+        "release-it": "^17.3.0"
     },
     "prettier": {
         "arrowParens": "always",
