--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
         "release": "release-it"
     },
     "devDependencies": {
-        "@stylistic/eslint-plugin-js": "^1.7.0",
+        "@stylistic/eslint-plugin-js": "^1.7.2",
         "eslint": "^9.0.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-perfectionist": "^2.10.0",
         "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-unicorn": "^52.0.0",
+        "eslint-plugin-simple-import-sort": "^12.1.0",
+        "eslint-plugin-unicorn": "^53.0.0",
         "prettier": "^3.2.5",
         "release-it": "^17.3.0"
     },
@@ -58,32 +61,5 @@
         "tabWidth": 2,
         "useTabs": false,
         "embeddedLanguageFormatting": "auto"
-    },
-    "eslintConfig": {
-        "root": true,
-        "plugins": [
-            "prettier",
-            "@stylistic/js",
-            "unicorn"
-        ],
-        "parserOptions": {
-            "ecmaVersion": "latest",
-            "sourceType": "module"
-        },
-        "extends": [
-            "eslint:recommended",
-            "plugin:prettier/recommended",
-            "plugin:unicorn/recommended"
-        ],
-        "env": {
-            "es2021": true,
-            "node": true,
-            "es6": true,
-            "es2024": true
-        },
-        "rules": {
-            "no-unused-vars": "warn",
-            "no-console": "off"
-        }
     }
 }
