--- a/.release-it.json
+++ b/.release-it.json
@@ -4,5 +4,11 @@
   },
   "github": {
     "release": true
+  },
+  "plugins": {
+    "@release-it/bumper": {
+      "in": "package.json",
+      "out": "package.json"
+    }
   }
 }
