--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.5.0",
+        "@release-it/bumper": "^6.0.1",
         "@stylistic/eslint-plugin-js": "^1.7.2",
         "eslint": "^9.0.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-perfectionist": "^2.10.0",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-simple-import-sort": "^12.1.0",
