--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
         "text-case": "^1.0.9"
     },
     "scripts": {
-        "release": "release-it"
+        "release": "release-it --ci"
+    },
+    "exports": {
+        ".": "./index.js",
+        "xxhash": "lib/xxhash.js"
     },
     "devDependencies": {
         "@eslint/js": "^9.5.0",
