--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "type": "module",
   "dependencies": {
+    "reed-solomon": "^4.0.0",
     "text-case": "^1.0.9"
   },
   "scripts": {
@@ -61,12 +62,12 @@
     "@stylistic/eslint-plugin-js": "^1.7.2",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-no-secrets": "^1.0.2",
     "eslint-plugin-perfectionist": "^2.10.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-sonarjs": "^1.0.3",
-    "eslint-plugin-no-secrets": "^1.0.2",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-sonarjs": "^1.0.3",
     "eslint-plugin-unicorn": "^53.0.0",
     "prettier": "^3.2.5",
     "release-it": "^17.3.0"
