--- a/package.json
+++ b/package.json
@@ -75,21 +75,23 @@
     "text-case": "^1.0.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@release-it/bumper": "^6.0.1",
-    "@stylistic/eslint-plugin-js": "^2.9.0",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.13.0",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "@stylistic/eslint-plugin-js": "^2.9.0",
+    "eslint": "^9.14.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-n": "^17.12.0",
     "eslint-plugin-no-secrets": "^1.0.2",
-    "eslint-plugin-perfectionist": "^3.8.0",
+    "eslint-plugin-perfectionist": "^3.9.1",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-security": "^3.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sonarjs": "^2.0.3",
+    "eslint-plugin-sonarjs": "^2.0.4",
     "eslint-plugin-unicorn": "^56.0.0",
     "prettier": "^3.3.3",
-    "release-it": "^17.8.2"
+    "release-it": "^17.10.0"
   },
   "engines": {
     "node": ">=20"
