added 'ensure-env' fn, and updated everything to match. also did some readme/export housekeeping.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "./yoctoid": "./lib/yoctoid.js",
     "./xxhash": "./lib/xxhash.js",
     "./object-sync": "./lib/object-sync.js",
-    "./time-ago": "./lib/time-ago.js"
+    "./time-ago": "./lib/time-ago.js",
+    "./ensure-env": "./lib/ensure-env.js"
   },
   "main": "index.js",
   "scripts": {
